Controlador y navegacion con este

--- a/Back/libreria-sb/src/main/resources/templates/listaLibros.html
+++ b/Back/libreria-sb/src/main/resources/templates/listaLibros.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro de Libros</title>
-    <link rel="stylesheet" href="CSS/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/style-principal.css">
+    <title>Lista de Libros</title>
+    <link rel="stylesheet" href="/CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="/CSS/style-principal.css">
 </head>
 
 <body>
@@ -32,27 +32,27 @@
                 <div class="position-sticky pt-3 sidebar-sticky">
                     <ul class="nav flex-column mb-auto">
                         <li class="nav-item">
-                            <a href="principal.html" class="nav-link text-white text-center">
+                            <a href="/principal" class="nav-link text-white text-center">
                                 Inicio
                             </a>
                         </li>
                         <li class="nav-item ">
-                            <a href="listaLibros.html" class="nav-link text-white text-center">
+                            <a href="/listaLibros" class="nav-link text-white text-center">
                                 Lista de Libros
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="RegistroLibros.html" class="nav-link text-white text-center">
+                            <a href="/RegistroLibros" class="nav-link text-white text-center">
                                 Registro de libros
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="DatosUsuario.html" class="nav-link text-white text-center">
+                            <a href="/DatosUsuario" class="nav-link text-white text-center">
                                 Datos Usuario
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="Contacto.html" class="nav-link text-white text-center">
+                            <a href="/Contacto" class="nav-link text-white text-center">
                                 Contacto
                             </a>
                         </li>
@@ -60,7 +60,10 @@
             </nav>
         </div>
     </div>
-
+    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 text-bg-light">
+        <h1>LISTO PARA EXPLORAR</h1>
+        <p> A un click de que puedas explorar nuevos mundos</p>
+    </main>
 </body>
 
 </html>
