--- a/Back/libreria-sb/src/main/resources/templates/principal.html
+++ b/Back/libreria-sb/src/main/resources/templates/principal.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Principal</title>
     <!-- CSS only -->
-    <link rel="stylesheet" href="CSS/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/style-principal.css">
+    <link rel="stylesheet" href="/CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="/CSS/style-principal.css">
 </head>
 
 <body>
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="principal.html">Leeme! hoy y siempre!</a>
+        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="/principal">Leeme! hoy y siempre!</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -23,7 +23,7 @@
             aria-label="Search">
         <div class="navbar-nav">
             <div class="nav-item text-nowrap">
-                <a class="nav-link px-3" href="login.html">SALIR</a>
+                <a class="nav-link px-3" href="/">SALIR</a>
             </div>
         </div>
     </header>
@@ -33,27 +33,27 @@
                 <div class="position-sticky pt-3 sidebar-sticky">
                     <ul class="nav flex-column mb-auto">
                         <li class="nav-item">
-                            <a href="principal.html" class="nav-link text-white text-center">
+                            <a href="/principal" class="nav-link text-white text-center">
                                 Inicio
                             </a>
                         </li>
                         <li class="nav-item ">
-                            <a href="listaLibros.html" class="nav-link text-white text-center">
+                            <a href="/listaLibros" class="nav-link text-white text-center">
                                 Lista de Libros
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="RegistroLibros.html" class="nav-link text-white text-center">
+                            <a href="/RegistroLibros" class="nav-link text-white text-center">
                                 Registro de libros
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="DatosUsuario.html" class="nav-link text-white text-center">
+                            <a href="/DatosUsuario" class="nav-link text-white text-center">
                                 Datos Usuario
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="Contacto.html" class="nav-link text-white text-center">
+                            <a href="/Contacto" class="nav-link text-white text-center">
                                 Contacto
                             </a>
                         </li>
