--- a/Back/libreria-sb/src/main/resources/templates/RegistroLibros.html
+++ b/Back/libreria-sb/src/main/resources/templates/RegistroLibros.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="principal.html">Leeme! hoy y siempre!</a>
+        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="/principal">Leeme! hoy y siempre!</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -22,7 +22,7 @@
             aria-label="Search">
         <div class="navbar-nav">
             <div class="nav-item text-nowrap">
-                <a class="nav-link px-3" href="login.html">SALIR</a>
+                <a class="nav-link px-3" href="/">SALIR</a>
             </div>
         </div>
     </header>
