--- a/Back/libreria-sb/src/main/resources/templates/index.html
+++ b/Back/libreria-sb/src/main/resources/templates/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="/CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <title>Login biblioteca</title>
 </head>
 
@@ -16,12 +16,12 @@
             <h1 class="h3 mb-3 fw-normal">INICIO DE SESION</h1>
 
             <div class="form-floating">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Correo electronico</label>
+                <input type="email" class="form-control" id="floatingInput" placeholder="username">
+                <label for="floatingInput">Nombre de usuario</label>
             </div>
 
             <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Contraseña">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="password">
                 <label for="floatingPassword">Contraseña</label>
             </div>
 
@@ -35,12 +35,14 @@
 
             <a class="link-dark h6" href="">No tienes cuenta? REGISTRATE</a>
 
-            <button class="w-100 btn btn-lg btn-primary" type="submit"><a href="/principal"
-                    class="link-dark text-light">
-                    Entrar</a></button>
+            <button class="w-100 btn btn-lg btn-primary" type="button" onclick="login()">
+                Entrar</button>
+            <div id="errorBox"></div>
             <p class="mt-5 mb-3 text-muted">&copy; Grupo 15 ciclo 3</p>
         </form>
     </main>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/login.js"></script>
 </body>
 
 </html>
