coneccion base de datos

--- a/Back/libreria-sb/src/main/resources/templates/principal.html
+++ b/Back/libreria-sb/src/main/resources/templates/principal.html
@@ -38,8 +38,8 @@
                             </a>
                         </li>
                         <li class="nav-item ">
-                            <a href="/listaLibros" class="nav-link text-white text-center">
-                                Lista de Libros
+                            <a href="/catalogo" class="nav-link text-white text-center">
+                                Catalogo
                             </a>
                         </li>
                         <li class="nav-item">
@@ -104,7 +104,8 @@
                         <p class="lead">EL libro que quieras en formato pdf para tu uso</p>
                     </div>
                     <div class="col-md-5">
-                        <img src="" width="300" height="300" alt="" class="image-fluid img-thumbnail">
+                        <img src="https://static01.nyt.com/images/2018/07/12/universal/es/LIBRERIASESPA1206/LIBRERIASESPA1206-superJumbo.jpg"
+                            width="600" height="600" alt="" class="image-fluid img-thumbnail">
 
                     </div>
                 </div>
@@ -116,14 +117,14 @@
                         <p class="lead">Te ayudamos a encontrarlo en las principales librerias del pais.</p>
                     </div>
                     <div class="col-md-5 order-md-1">
-                        <img src="" width="300" height="300" alt="" class="image-fluid img-thumbnail">
+                        <img src="https://www.eluniverso.com/resizer/g1WeHjJrhjHXY87vEDz17Tz7y1Y=/1000x666/smart/filters:quality(70)/cloudfront-us-east-1.images.arcpublishing.com/eluniverso/WOKLRMBXTRC7XIPWJIWU457MSY.jpg"
+                            width="600" height="600" alt="" class="image-fluid img-thumbnail">
 
                     </div>
                 </div>
             </div>
 
     </main>
-    <!-- JavaScript Bundle with Popper -->
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
