--- a/Back/libreria-sb/src/main/resources/templates/DatosUsuario.html
+++ b/Back/libreria-sb/src/main/resources/templates/DatosUsuario.html
@@ -37,8 +37,8 @@
                             </a>
                         </li>
                         <li class="nav-item ">
-                            <a href="/listaLibros" class="nav-link text-white text-center">
-                                Lista de Libros
+                            <a href="/catalogo" class="nav-link text-white text-center">
+                                Catalogo
                             </a>
                         </li>
                         <li class="nav-item">
