--- a/Back/libreria-sb/src/main/resources/templates/catalogo.html
+++ b/Back/libreria-sb/src/main/resources/templates/catalogo.html
@@ -39,7 +39,7 @@
                         </li>
                         <li class="nav-item ">
                             <a href="/catalogo" class="nav-link text-white text-center">
-                                Lista de Libros
+                                Catalogo
                             </a>
                         </li>
                         <li class="nav-item">
