--- a/Back/libreria-sb/src/main/resources/templates/crearLibro.html
+++ b/Back/libreria-sb/src/main/resources/templates/crearLibro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro de Libros</title>
+    <title>Crear libro</title>
     <link rel="stylesheet" href="/CSS/bootstrap.min.css">
     <link rel="stylesheet" href="/CSS/style-principal.css">
 </head>
@@ -59,26 +59,40 @@
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 te xt-bg-light">
         <div class="container">
             <div class="row">
-                <h1>Lista de Libros</h1>
+                <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
+                    <h1 class="text-center">Registro Nuevo Libro</h1>
+                    <div class="card-body">
+                        <form th:action="@{/RegistroLibros/libro}" th:object="${libro}" method="post">
+                            <div class="form-group">
+                                <label>Codigo</label>
+                                <input type="text" name="codigo" th:field="*{id}" class="form-control"
+                                    placeholder="Digite el codigo" required>
+                                <br>
+                                <label>Nombre</label>
+                                <input type="text" name="name" th:field="*{name}" class="form-control"
+                                    placeholder="Digite el nombre del libro" required>
+                                <br>
+                                <label>Descripcion</label>
+                                <input type="text" name="description" th:field="*{description}" class="form-control"
+                                    placeholder="Digite una Descripcion del libro" required>
+                                <br>
+                                <label>Editorial</label>
+                                <input type="text" name="editorial" th:field="*{editorial}" class="form-control"
+                                    placeholder="Digite una Descripcion del libro" required>
+                                <br>
+                                <label>ImageUrl</label>
+                                <input type="text" name="imageUrl" th:field="*{imageUrl}" class="form-control"
+                                    placeholder="Agregue el link de una imagen" required>
+                                <br>
+                                <div class="box-footer">
+                                    <button class="btn btn-success">Enviar</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+
+                </div>
             </div>
-            <table class="table table-striped table-bordered">
-                <thead class="table-dark">
-                    <tr>
-                        <th>Codigo</th>
-                        <th>Nombre</th>
-                        <th>Descripcion</th>
-                        <th>Editorial</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="libro : ${libro}">
-                        <td th:text="${libro.id}"></td>
-                        <td th:text="${libro.name}"></td>
-                        <td th:text="${libro.description}"></td>
-                        <td th:text="${libro.editorial}"></td>
-                    </tr>
-                </tbody>
-            </table>
         </div>
     </main>
 
