--- a/Back/libreria-sb/src/main/resources/templates/editarLibro.html
+++ b/Back/libreria-sb/src/main/resources/templates/editarLibro.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="/principal">Leeme! hoy y siempre!</a>
+        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="/">Leeme! hoy y siempre!</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -22,7 +22,7 @@
             aria-label="Search">
         <div class="navbar-nav">
             <div class="nav-item text-nowrap">
-                <a class="nav-link px-3" href="/">SALIR</a>
+                <a class="nav-link px-3" href="/Login">LOGIN</a>
             </div>
         </div>
     </header>
@@ -32,7 +32,7 @@
                 <div class="position-sticky pt-3 sidebar-sticky">
                     <ul class="nav flex-column mb-auto">
                         <li class="nav-item">
-                            <a href="/principal" class="nav-link text-white text-center">
+                            <a href="/" class="nav-link text-white text-center">
                                 Inicio
                             </a>
                         </li>
