--- a/Back/libreria-sb/src/main/resources/templates/Login.html
+++ b/Back/libreria-sb/src/main/resources/templates/Login.html
@@ -33,8 +33,8 @@
             <p class="mt-5 mb-3 text-muted">&copy; Grupo 15 ciclo 3</p>
         </form>
     </main>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/login.js"></script>
+    <script src="/JS/bootstrap.min.js"></script>
+    <script src="/JS/login.js"></script>
 </body>
 
 </html>
