--- a/Back/libreria-sb/src/main/resources/templates/catalogo.html
+++ b/Back/libreria-sb/src/main/resources/templates/catalogo.html
@@ -121,7 +121,7 @@
         </div>
         </div>
     </main>
-    <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="/JS/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
