--- a/Back/libreria-sb/src/main/resources/templates/index.html
+++ b/Back/libreria-sb/src/main/resources/templates/index.html
@@ -124,7 +124,7 @@
             </div>
 
     </main>
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="/JS/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
